# bad-ai-route

./: .gitignore  README.md  config.example.json  pyproject.toml
ai_route/: __init__.py  __main__.py  admin_api.py  anthropic_proxy.py  app.py  config.py  openai_proxy.py  prober.py  router.py  state.py  upstream.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  api.ts  shims-vue.d.ts  style.css
web/src/components/: ModelRankList.vue  UpstreamForm.vue
