[project]
name = "ai-route"
version = "0.1.0"
description = "Multi-model fallback proxy for OpenAI/Anthropic APIs"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.scripts]
ai-route = "ai_route.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
